--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,2 @@
-@import "utils";
-@import "fonts";
-@import "typography";
-
-body {
-  background: $c-gray;
-}
+@import "./_utils.scss";
+@import "./blocks.scss";
