--- a/src/styles/blocks/explore-online.scss
+++ b/src/styles/blocks/explore-online.scss
@@ -44,14 +44,19 @@
     }
   }
 
-  &__photo {
+  &__photo-container {
     margin-bottom: 24px;
-    width: 100%;
-    transition: transform $transition-duration;
+    overflow: hidden;
 
     @include onTablet {
       margin-bottom: 32px;
     }
+  }
+
+  &__photo {
+    width: 100%;
+    vertical-align: top;
+    transition: transform $transition-duration;
 
     &:hover {
       transform: scale(1.1);
