--- a/src/styles/blocks/form.scss
+++ b/src/styles/blocks/form.scss
@@ -16,6 +16,7 @@
 
     &:-webkit-autofill {
       -webkit-box-shadow: 0 0 0 1000px #f8f8fa inset;
+      -webkit-text-fill-color: $main-dark;
     }
 
     &::placeholder {
